(MSS-1620) Fix-PDP-layout-shifts-caused-by-product-images why: Fixed review comment

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
@@ -132,7 +132,7 @@
                             }
 
                             @media (max-width: $small-screen-width375) {
-                                width: rem(357);
+                                width: rem(375);
                                 height: rem(450);                                       
                             }
 
